deployment/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-tier
spec:
  selector:
    matchLabels:
      app: app-tier
  template:
    metadata:
      labels:
        app: app-tier
    spec:
      containers:
        - name: demo
          image: laravel-kubernetes-demo
          ports:
            - containerPort: 80
