deployment/app-tier.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-oke
  labels:
    name: myapp
spec:
  containers:
    - name: myapp
      image: nginx
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
