deployment/app-services.yml
apiVersion: v1
kind: Service
metadata:
  name: app-tier-service
spec:
  selector:
    app: app-tier
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
